@@ -70,3 +70,7 @@ Other Changes
   in an exception handler, but used outside of the handler.
 
   Closes #626
+
+* Add ``disable-next`` option: allows using `# pylint: disable-next=msgid` to disable a message for the following line
+
+  Closes #1682
